@@ -4,6 +4,15 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.16-24 (opened August 17, 2009)
 
+	* ordiellipse & ordihull: gained new argument 'label' to put the
+	name of the group in the centre of the ellipse or the hull. The
+	functions now return invisibly data on their plots for each
+	plotted item: ordiellipse() the covariance matrix (cov.wt()
+	result), and ordihull() the coordinates of the hull
+	vertices. Nothing is done with these yet, but the intention is to
+	write a summary() method to give the coordinates of the centres
+	and surface areas of the plotted hulls or ellipses.
+
 	* ordiellipse: does not depend on the 'ellipse' package, but finds
 	the coordinates of ellipse using the equation taken from the 'car'
 	package. However, this devel version of 'vegan' still must SUGGEST
